fix(design) dark theme contrast between elements

--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@
   --border-color: light-dark(rgb(var(--color-gray)), rgb(var(--color-darkgray)));
   --bg-card: light-dark(rgb(var(--color-lightgray)), rgb(var(--color-darkengray)));
   --bg-card-secondary: light-dark(rgb(var(--color-lightengray)), rgb(var(--color-darkengray)));
-  --text-color: light-dark(rgb(var(--color-black)), rgb(var(--color-white)));
+  --text-color: light-dark(rgb(var(--color-black)), rgb(var(--color-lightgray)));
 
   /* Basics */
   --pixel: .0625rem; /* 1px */
@@ -57,7 +57,7 @@ body {
 .heading-container,
 .footer-container {
   background-color: rgb(var(--color-black));
-  color: rgb(var(--color-white));
+  color: rgb(var(--color-lightgray));
   padding: 2em;
   line-height: 1.125;
 
@@ -210,7 +210,7 @@ input[type="reset"],
 
 .filters-bar-item,
 .container-item {
-  background-color: light-dark(rgb(var(--color-white)), rgb(var(--color-black)));
+  background-color: light-dark(rgb(var(--color-white)), rgb(var(--color-preblack)));
   border: var(--pixel) solid var(--border-color);
   border-radius: var(--default-border-radius);
   box-shadow: .1em .2em .2em -.1em light-dark(rgb(var(--color-gray)), rgb(var(--color-black)));
@@ -277,6 +277,7 @@ input[type="reset"],
   }
 
   .table-container {
+    background-color: rgb(var(--color-preblack));
     width: 100%;
 
     th, td {
@@ -473,10 +474,8 @@ input[type="reset"],
 
 .highcharts-root {
   @media (prefers-color-scheme: dark) {
-    background-color: rgb(var(--color-black));
-
     .highcharts-background {
-      fill: rgb(var(--color-black));
+      fill: rgb(var(--color-preblack));
     }
 
     text {
